# proglib_homework

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml  platform_ubuntu.yml  platform_windows.yml  run_tests.yml
command/: CMakeLists.txt
command/include/: icommand.h
commands/: CMakeLists.txt
commands/include/: adapters.h
commands/source/: adapters.cpp
commands/test/: test_adapters.cpp
equations/: CMakeLists.txt
equations/include/: equations.h
equations/source/: equations.cpp
equations/test/: test_equations.cpp
exceptionhandler/: CMakeLists.txt
exceptionhandler/include/: commands.h  exception_handler.h  exception_handlers.h  handler_pool.h
exceptionhandler/source/: commands.cpp  exception_handler.cpp  exception_handlers.cpp  handler_pool.cpp
exceptionhandler/test/: test_exception_handler.cpp  test_exceptions.cpp
interfaces/: CMakeLists.txt
interfaces/include/: interfaces.h
movable/: CMakeLists.txt
movable/include/: endable.h  movable.h  startable.h
movable/source/: movable.cpp
movable/test/: test_coordinates.cpp  test_movable.cpp
rotating/: CMakeLists.txt
rotating/include/: endable.h  rotating.h  startable.h
rotating/source/: rotating.cpp
rotating/test/: main.cpp  test_rotating.cpp
